removed job descriptions

--- a/careers.html
+++ b/careers.html
@@ -85,47 +85,83 @@
 <!-- End banner Area -->
 
 <!-- Start Sample Area -->
-<section class="mt-80">
+<section class="mt-80 mb-40">
     <div class="container">
         <h3 class="text-heading">Apprentice</h3>
-        <p class="sample-text">
-            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
-
-        </p>
+<!--        <h3 class="mt-40">Responsibilities</h3>
+        <br>
+        <ul class="unordered-list mb-40">
+            <li>1st Aid course completed</li>
+            <li>OSHA 10 course completed</li>
+            <li>RF Awareness course completed</li>
+            <li>Comtrain Rigging course completed</li>
+            <li>Basic understanding of ANSI 10.48</li>
+            <li>Basic Capstan Operation</li>
+            <li>Acquired all hand tools</li>
+            <li>Harness</li>
+            <li>Filled out JSA/Daily/Hazzard</li>
+            <li>Conducted tailgate meeting</li>
+            <li>Demonstrated proper weatherproofing</li>
+            <li>Taken ground / tower pre-pictures</li>
+            <li>Understands generic layout of CD’s</li>
+            <li>Followed instructions for basic rigging of rope</li>
+            <li>Fully punched in support down tower</li>
+        </ul>-->
         <a href="mailto:hr@testcomm.com?subject=Apprentice Position" class="genric-btn primary">Apply</a>
     </div>
 </section>
-<section class="mt-80">
+<section class="mt-80 mb-40">
     <div class="container">
         <h3 class="text-heading">Tower Technician 1</h3>
-        <p class="sample-text">
-            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
-
+ <!--       <p class="sample-text">
+            We are looking for someone who demonstrates basic equipment assembly
+            (ant/brackets). Who is able to complete a full sector install. Who demonstrates
+            the ability to dress / terminate sector and demarcation points
         </p>
+        <h3 class="mt-40">Responsibilities</h3>
+        <br>
+        <ul class="unordered-list mb-40">
+            <li>Fully complete a tower top photo log</li>
+            <li>Displays accuracy with compass and aat tool (mag declination)</li>
+            <li>Properly sets MDT/plumb as antenna is mounted</li>
+            <li>Able to fiber test</li>
+            <li>Able to assist troubleshooting and testing processes with load hopping</li>
+            <li>Preform tape drops</li>
+            <li>Safely rig for controlled decent</li>
+            <li>Successfully preform Cad shots</li>
+            <li>Install ground kit on coax</li>
+            <li>Set grips on trunk lines</li>
+            <li>Understand/read CDs</li>
+            <li>Operate capstan on complicated rigging/lift</li>
+            <li>Understands generic layout of CD’s</li>
+            <li>Predict grounding installation solutions (estimate lengths and attachments)</li>
+            <li>Cable management</li>
+        </ul>-->
         <a href="mailto:hr@testcomm.com?subject=Tower Technician 1 Position" class="genric-btn primary">Apply</a>
     </div>
 </section>
-<section class="mt-80">
+<section class="mt-80 mb-40">
     <div class="container">
         <h3 class="text-heading">Tower Technician 2</h3>
-        <p class="sample-text">
-            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
-
+       <!-- <p class="sample-text">
+            We are looking for someone who demonstrates basic equipment assembly (ant/brackets).  Who is able to complete a full sector install.  Who demonstrates the ability to dress / terminate sector and demarcation points
         </p>
+        <h3 class="mt-40">Responsibilities</h3>
+        <br>
+        <ul class="unordered-list mb-40">
+            <li>Fully capable with all testing methods</li>
+            <li>Correctly installs Hardline connectors</li>
+            <li>Manage top activity and drive productivity</li>
+            <li>Accurately estimate headroom on hoisting grips for trunk lines</li>
+            <li>Fully troubleshoot topside issues</li>
+            <li>Edit/review JSA HAS DAILY and documents per carrier/vendor/tower requirements</li>
+            <li>Assists/understands COPs</li>
+            <li>Use ATC Lite or like device to set RETS</li>
+            <li>Estimates # of supports fabricate routing solutions as per carrier/vendor</li>
+        </ul>-->
         <a href="mailto:hr@testcomm.com?subject=Tower Technician 2 Position" class="genric-btn primary">Apply</a>
     </div>
 </section>
-<section class="mt-80 mb-80">
-    <div class="container">
-        <h3 class="text-heading">Wireless Crew Foreman</h3>
-        <p class="sample-text">
-            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
-
-        </p>
-        <a href="mailto:hr@testcomm.com?subject=Wireless Crew Forman Position" class="genric-btn primary">Apply</a>
-    </div>
-</section>
-<!-- End Sample Area -->
 
 <!-- start footer Area -->
 <footer class="footer-area section-gap">
