added job descriptions

--- a/apprentice.html
+++ b/apprentice.html
@@ -67,54 +67,141 @@
     </div>
 </header><!-- #header -->
 
-<!-- start banner Area -->
-<section class="banner-area banner-clients relative" id="home">
-    <div class="overlay overlay-bg"></div>
+<!-- Start description area -->
+<section class="sample-text-area">
     <div class="container">
-        <div class="row d-flex align-items-center justify-content-center">
-            <div class="about-content col-lg-12">
-                <h1 class="text-white">
-                    Clients
-                </h1>
-                <p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="clients.html"> Clients</a></p>
-            </div>
-        </div>
+        <h1 class="text-heading mt-50" style="font-size:32px;">Apprentice</h1>
+        <h3 class="text-heading">Job Description</h3>
+        <p class="sample-text">
+            Repair, install or maintain mobile or stationary radio transmitting, broadcasting and receiving
+            equipment and two-way radio communications systems used in cellular telecommunications and
+            mobile broadband. Test and analyze network coverage.
+        </p>
+    </div>
+    <div class="container">
+        <h3 class="text-heading">Job Responsibilities</h3>
+        <p class="sample-text">
+            Responsible for building and testing of communication networks associated with the project.
+        </p>
+        <h4 class="mb-20">Apprentice Responsibilities</h4>
+        <ul class="unordered-list">
+            <li>
+                <p>Read, understand and sign company policies</p>
+            </li>
+            <li>
+                <p>Begin and complete 1 st aid course</p>
+            </li>
+            <li>
+                <p>Begin and complete RF awareness course</p>
+            </li>
+            <li>
+                <p>Begin, complete and pass ComTrain rescue course</p>
+            </li>
+            <li>
+                <p>Understand and have a basic understanding of ANSI 10.48</p>
+            </li>
+            <li>
+                <p>Understand and have a basic Capstan Operation</p>
+            </li>
+            <li>
+                <p>Must acquire and properly operate all hand and power tools</p>
+            </li>
+            <li>
+                <p>Obtain a harness</p>
+            </li>
+            <li>
+                <p>Learn how to weatherproof according to manufacturer specs</p>
+            </li>
+            <li>
+                <p>Learn how to properly fill out a JSA/Daily/Hazard form</p>
+            </li>
+            <li>
+                <p>Participate in daily tailgate meetings</p>
+            </li>
+            <li>
+                <p>Take proper ground/tower pre-pictures</p>
+            </li>
+            <li>
+                <p>Understands the generic layout of cd’s</p>
+            </li>
+            <li>
+                <p>Follow instructions for basic rigging of rope</p>
+            </li>
+            <li>
+                <p>Efficiently climb communication structures</p>
+            </li>
+            <li>
+                <p>Learn how to weatherproof according to manufacturer specs</p>
+            </li>
+            <li>
+                <p>Learn proper positioning to efficiently perform tasks at heights</p>
+            </li>
+            <li>
+                <p>Learn cable supporting according to industry standards and manufacturer specs</p>
+            </li>
+            <li>
+                <p>Learn proper knot tying and ability to use appropriate knots for each unique situation</p>
+            </li>
+            <li>
+                <p>Complete any other tasks or duties assigned by Foreman</p>
+            </li>
+        </ul>
+    </div>
+    <div class="container">
+        <h3 class="text-heading">Job Responsibilities</h3>
+        <p class="sample-text">
+            Ability to trouble shoot and good interpersonal skills are keys for success in this role.
+        </p>
+        <h4 class="mb-20">Apprentice Requirements</h4>
+        <ul class="unordered-list">
+            <li>
+                <p>
+                    Individuals must be able to climb cell phone towers, be comfortable at extreme heights and
+                    with stand weather conditions. Please do not apply if you are afraid of heights or cannot
+                    work outside in the different weather conditions for long hours.
+                </p>
+            </li>
+            <li>
+                <p>High school Diploma or G.E.D.</p>
+            </li>
+            <li>
+                <p>Previous telecommunications experience helpful</p>
+            </li>
+        </ul>
+    </div>
+    <div class="container">
+        <h3 class="text-heading">Benefits</h3>
+        <p class="sample-text">
+            We are committed to providing a work environment for education, training, and certification on the
+            latest technology and processes. Plus, we offer competitive compensation and full benefits.
+        </p>
+        <h4 class="mb-20">Benefits Include</h4>
+        <ul class="unordered-list">
+            <li>
+                <p>Competitive Compensation</p>
+            </li>
+            <li>
+                <p>Health, dental, vision (after 60 days)</p>
+            </li>
+            <li>
+                <p>Paid Life Insurance</p>
+            </li>
+            <li>
+                <p>Short Term Disability</p>
+            </li>
+            <li>
+                <p>IRA (after 18 months)</p>
+            </li>
+            <li>
+                <p>Paid Time Off</p>
+            </li>
+            <li>
+                <p>Incentive programs</p>
+            </li>
+        </ul>
     </div>
 </section>
-<!-- End banner Area -->
-
-<section class="home-client-area section-gap" id="client">
-    <div class="container">
-        <div class="row justify-content-center mb-30">
-            <div class="col-md-12 pb-30 header-text text-center">
-                <h2 class="mb-10">Just a few of our clients</h2>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/sprint-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/sba-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/att-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/american-tower-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/verizon-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/crown-castle-color.png" alt="logo">
-            </div>
-            <div class="col-lg-3 mb-80">
-                <img src="img/clients/t-mobile-color.png" alt="logo">
-            </div>
-        </div>
-    </div>
-</section>
+<!-- End Sample Area -->
 
 <!-- start footer Area -->
 <footer class="footer-area section-gap">
