added links to apply

--- a/apprentice.html
+++ b/apprentice.html
@@ -200,6 +200,9 @@
             </li>
         </ul>
     </div>
+    <div class="container">
+        <a href="mailto:hr@testcomm.com?subject=Apprentice Position" class="genric-btn primary">Apply</a>
+    </div>
 </section>
 <!-- End Sample Area -->
 
