changed link text

--- a/careers.html
+++ b/careers.html
@@ -107,7 +107,7 @@
             <li>Followed instructions for basic rigging of rope</li>
             <li>Fully punched in support down tower</li>
         </ul>-->
-        <a href="apprentice.html" class="genric-btn primary">Apply</a>
+        <a href="apprentice.html" class="genric-btn primary">View Job</a>
     </div>
 </section>
 <section class="mt-80 mb-40">
@@ -137,7 +137,7 @@
             <li>Predict grounding installation solutions (estimate lengths and attachments)</li>
             <li>Cable management</li>
         </ul>-->
-        <a href="tower-technician-1.html" class="genric-btn primary">Apply</a>
+        <a href="tower-technician-1.html" class="genric-btn primary">View Job</a>
     </div>
 </section>
 <section class="mt-80 mb-40">
@@ -159,7 +159,7 @@
             <li>Use ATC Lite or like device to set RETS</li>
             <li>Estimates # of supports fabricate routing solutions as per carrier/vendor</li>
         </ul>-->
-        <a href="tower-technician-2.html" class="genric-btn primary">Apply</a>
+        <a href="tower-technician-2.html" class="genric-btn primary">View Job</a>
     </div>
 </section>
 
