added videos, gallery and other updates

--- a/careers.html
+++ b/careers.html
@@ -1,44 +1,64 @@
 <!DOCTYPE html>
-<html lang="zxx" class="no-js">
+<html lang="zxx"
+      class="no-js">
 <head>
     <!-- Mobile Specific Meta -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon"
+          href="img/favicon.png">
     <!-- Author Meta -->
-    <meta name="author" content="codepixer">
+    <meta name="author"
+          content="codepixer">
     <!-- Meta Description -->
-    <meta name="description" content="TEST COMMUNICATIONS is a leading regional provider of a full range of services for both wireless and wireline telecommunications customers. These services include but are not limited to Line & Antenna, Microwave, Architecture & Engineering, Construction Management, Warehousing and Logistics, Fiber Optics services, Radio Frequency testing services and several other ancillary services which round out a comprehensive suite of services and offerings.">
+    <meta name="description"
+          content="TEST COMMUNICATIONS is a leading regional provider of a full range of services for both wireless and wireline telecommunications customers. These services include but are not limited to Line & Antenna, Microwave, Architecture & Engineering, Construction Management, Warehousing and Logistics, Fiber Optics services, Radio Frequency testing services and several other ancillary services which round out a comprehensive suite of services and offerings.">
     <!-- Meta Keyword -->
-    <meta name="keywords" content="wireless, innovation, test, test communications, testing, ef&i, specialty, rf testing, fiber optic, engineering, furnish, installation, line, antenna, microwave, commissioning, integration, outside plant, inside plant, lighting, broadband, wifi, das, site acquisition, architecture, tower, tower modification, safety, quality, warehousing, logistics">
+    <meta name="keywords"
+          content="wireless, innovation, test, test communications, testing, ef&i, specialty, rf testing, fiber optic, engineering, furnish, installation, line, antenna, microwave, commissioning, integration, outside plant, inside plant, lighting, broadband, wifi, das, site acquisition, architecture, tower, tower modification, safety, quality, warehousing, logistics">
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
     <title>Test Communications</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700"
+          rel="stylesheet">
     <!--
     CSS
     ============================================= -->
-    <link rel="stylesheet" href="css/linearicons.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/nice-select.css">
-    <link rel="stylesheet" href="css/hexagons.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet"
+          href="css/linearicons.css">
+    <link rel="stylesheet"
+          href="css/font-awesome.min.css">
+    <link rel="stylesheet"
+          href="css/bootstrap.css">
+    <link rel="stylesheet"
+          href="css/magnific-popup.css">
+    <link rel="stylesheet"
+          href="css/nice-select.css">
+    <link rel="stylesheet"
+          href="css/hexagons.min.css">
+    <link rel="stylesheet"
+          href="css/animate.min.css">
+    <link rel="stylesheet"
+          href="css/owl.carousel.css">
+    <link rel="stylesheet"
+          href="css/main.css">
 </head>
 <body>
-<header id="header" id="home">
+<header id="header"
+        id="home">
     <div class="header-top">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
                     <ul>
-                        <li><a href="https://www.facebook.com/TESTCOMMUNICATIONS/"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/company/test-communications"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://www.facebook.com/TESTCOMMUNICATIONS/"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/company/test-communications"><i class="fa fa-linkedin"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
@@ -51,7 +71,9 @@
     <div class="container main-menu">
         <div class="row align-items-center justify-content-between d-flex">
             <div id="logo">
-                <a href="index.html"><img src="img/logo.png" alt="" title=""/></a>
+                <a href="index.html"><img src="img/logo.png"
+                                          alt=""
+                                          title=""/></a>
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
@@ -68,7 +90,8 @@
 </header><!-- #header -->
 
 <!-- start banner Area -->
-<section class="banner-area banner-career relative" id="home">
+<section class="banner-area banner-career relative"
+         id="home">
     <div class="overlay overlay-bg"></div>
     <div class="container">
         <div class="row d-flex align-items-center justify-content-center">
@@ -84,82 +107,54 @@
 </section>
 <!-- End banner Area -->
 
-<!-- Start Sample Area -->
-<section class="mt-80 mb-40">
+<section class="section-top-border">
     <div class="container">
-        <h3 class="text-heading">Apprentice</h3>
-<!--        <h3 class="mt-40">Responsibilities</h3>
-        <br>
-        <ul class="unordered-list mb-40">
-            <li>1st Aid course completed</li>
-            <li>OSHA 10 course completed</li>
-            <li>RF Awareness course completed</li>
-            <li>Comtrain Rigging course completed</li>
-            <li>Basic understanding of ANSI 10.48</li>
-            <li>Basic Capstan Operation</li>
-            <li>Acquired all hand tools</li>
-            <li>Harness</li>
-            <li>Filled out JSA/Daily/Hazzard</li>
-            <li>Conducted tailgate meeting</li>
-            <li>Demonstrated proper weatherproofing</li>
-            <li>Taken ground / tower pre-pictures</li>
-            <li>Understands generic layout of CD’s</li>
-            <li>Followed instructions for basic rigging of rope</li>
-            <li>Fully punched in support down tower</li>
-        </ul>-->
-        <a href="apprentice.html" class="genric-btn primary">View Job</a>
+        <div class="row video-item">
+            <div class="col-md-12">
+                <video controls
+                       autoplay>
+                    <source src="./media/test-recruiting.mov"
+                            type="video/mp4">
+                    <!--<source src="movie.ogg" type="video/ogg">-->
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="align-center">
+    <div class="container">
+        <!--<h3 class="text-heading">Text Sample</h3>-->
+        <h2 class="mb-20">
+            We Want You!
+        </h2>
+        <p class="sample-text">
+            TEST COMMUNICATIONS is a looking for motivated individuals for the following positions:
+        </p>
     </div>
 </section>
 <section class="mt-80 mb-40">
     <div class="container">
-        <h3 class="text-heading">Tower Technician 1</h3>
- <!--       <p class="sample-text">
-            We are looking for someone who demonstrates basic equipment assembly
-            (ant/brackets). Who is able to complete a full sector install. Who demonstrates
-            the ability to dress / terminate sector and demarcation points
-        </p>
-        <h3 class="mt-40">Responsibilities</h3>
-        <br>
-        <ul class="unordered-list mb-40">
-            <li>Fully complete a tower top photo log</li>
-            <li>Displays accuracy with compass and aat tool (mag declination)</li>
-            <li>Properly sets MDT/plumb as antenna is mounted</li>
-            <li>Able to fiber test</li>
-            <li>Able to assist troubleshooting and testing processes with load hopping</li>
-            <li>Preform tape drops</li>
-            <li>Safely rig for controlled decent</li>
-            <li>Successfully preform Cad shots</li>
-            <li>Install ground kit on coax</li>
-            <li>Set grips on trunk lines</li>
-            <li>Understand/read CDs</li>
-            <li>Operate capstan on complicated rigging/lift</li>
-            <li>Understands generic layout of CD’s</li>
-            <li>Predict grounding installation solutions (estimate lengths and attachments)</li>
-            <li>Cable management</li>
-        </ul>-->
-        <a href="tower-technician-1.html" class="genric-btn primary">View Job</a>
-    </div>
-</section>
-<section class="mt-80 mb-40">
-    <div class="container">
-        <h3 class="text-heading">Tower Technician 2</h3>
-       <!-- <p class="sample-text">
-            We are looking for someone who demonstrates basic equipment assembly (ant/brackets).  Who is able to complete a full sector install.  Who demonstrates the ability to dress / terminate sector and demarcation points
-        </p>
-        <h3 class="mt-40">Responsibilities</h3>
-        <br>
-        <ul class="unordered-list mb-40">
-            <li>Fully capable with all testing methods</li>
-            <li>Correctly installs Hardline connectors</li>
-            <li>Manage top activity and drive productivity</li>
-            <li>Accurately estimate headroom on hoisting grips for trunk lines</li>
-            <li>Fully troubleshoot topside issues</li>
-            <li>Edit/review JSA HAS DAILY and documents per carrier/vendor/tower requirements</li>
-            <li>Assists/understands COPs</li>
-            <li>Use ATC Lite or like device to set RETS</li>
-            <li>Estimates # of supports fabricate routing solutions as per carrier/vendor</li>
-        </ul>-->
-        <a href="tower-technician-2.html" class="genric-btn primary">View Job</a>
+        <div class="text-center">
+            <div class="row">
+                <div class="col-lg-4 mb-40">
+                    <h3 class="text-heading">Apprentice</h3>
+                    <a href="apprentice.html"
+                       class="genric-btn primary">View Job</a>
+                </div>
+                <div class="col-lg-4 mb-40">
+                    <h3 class="text-heading">Tower Technician 1</h3>
+                    <a href="tower-technician-1.html"
+                       class="genric-btn primary">View Job</a>
+                </div>
+                <div class="col-lg-4 mb-40">
+                    <h3 class="text-heading">Tower Technician 2</h3>
+                    <a href="tower-technician-2.html"
+                       class="genric-btn primary">View Job</a>
+                </div>
+            </div>
+
+        </div>
     </div>
 </section>
 
@@ -198,25 +193,41 @@
 </footer>
 <!-- End footer Area -->
 
-<script defer src="js/vendor/jquery-2.2.4.min.js"></script>
-<script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+<script defer
+        src="js/vendor/jquery-2.2.4.min.js"></script>
+<script defer
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<script defer src="js/vendor/bootstrap.min.js"></script>
+<script defer
+        src="js/vendor/bootstrap.min.js"></script>
 <script type="text/javascript"
-        defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-<script defer src="js/easing.min.js"></script>
-<script defer src="js/hoverIntent.js"></script>
-<script defer src="js/superfish.min.js"></script>
-<script defer src="js/jquery.ajaxchimp.min.js"></script>
-<script defer src="js/jquery.magnific-popup.min.js"></script>
-<script defer src="js/owl.carousel.min.js"></script>
-<script defer src="js/hexagons.min.js"></script>
-<script defer src="js/jquery.nice-select.min.js"></script>
-<script defer src="js/jquery.counterup.min.js"></script>
-<script defer src="js/waypoints.min.js"></script>
-<script defer src="js/mail-script.js"></script>
-<script defer src="js/main.js"></script>
+        defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+<script defer
+        src="js/easing.min.js"></script>
+<script defer
+        src="js/hoverIntent.js"></script>
+<script defer
+        src="js/superfish.min.js"></script>
+<script defer
+        src="js/jquery.ajaxchimp.min.js"></script>
+<script defer
+        src="js/jquery.magnific-popup.min.js"></script>
+<script defer
+        src="js/owl.carousel.min.js"></script>
+<script defer
+        src="js/hexagons.min.js"></script>
+<script defer
+        src="js/jquery.nice-select.min.js"></script>
+<script defer
+        src="js/jquery.counterup.min.js"></script>
+<script defer
+        src="js/waypoints.min.js"></script>
+<script defer
+        src="js/mail-script.js"></script>
+<script defer
+        src="js/main.js"></script>
 </body>
 </html>
 
