uploaded who we are video

--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
             <div class="col-md-12">
                 <video controls
                        autoplay>
-                    <source src="./media/test-core-values.mov"
+                    <source src="./media/test-who-we-are.mov"
                             type="video/mp4">
                     <!--<source src="movie.ogg" type="video/ogg">-->
                     Your browser does not support the video tag.
