--- a/index.html
+++ b/index.html
@@ -82,7 +82,21 @@
 				</div>
 			</section>
 			<!-- End banner Area -->
-
+			  <section class="section-top-border">
+				  <div class="container">
+					  <div class="row video-item">
+						  <div class="col-md-12">
+							  <video controls
+									 autoplay>
+								  <source src="./media/test-core-values.mov"
+										  type="video/mp4">
+								  <!--<source src="movie.ogg" type="video/ogg">-->
+								  Your browser does not support the video tag.
+							  </video>
+						  </div>
+					  </div>
+				  </div>
+			  </section>
 			<!-- Start cat Area -->
 			<section class="cat-area section-gap" id="feature">
 				<div class="container">							
