added company photo

--- a/about.html
+++ b/about.html
@@ -274,17 +274,23 @@
                 </div>
                 <!-- divs below is only for placeholders. lightbox deactivated -->
                 <div class="col-md-3">
+                    <a href="img/gallery/company-photo.jpg"
+                       class="img-pop-up"
+                       data-lightbox="TEST Company Photo"
+                       data-alt="Company Photo"
+                       data-title="Company Photo">
                         <div class="single-gallery-image"
-                             style="background: url(https://via.placeholder.com/250x200.png?text=Image+Goes+Here);"></div>
+                             style="background: url(img/gallery/company-photo.jpg);"></div>
+                    </a>
                 </div>
-                <div class="col-md-3">
-                    <div class="single-gallery-image"
-                         style="background: url(https://via.placeholder.com/250x200.png?text=Image+Goes+Here);"></div>
-                </div>
-                <div class="col-md-3">
-                    <div class="single-gallery-image"
-                         style="background: url(https://via.placeholder.com/250x200.png?text=Image+Goes+Here);"></div>
-                </div>
+                <!--<div class="col-md-3">-->
+                    <!--<div class="single-gallery-image"-->
+                         <!--style="background: url(https://via.placeholder.com/250x200.png?text=Image+Goes+Here);"></div>-->
+                <!--</div>-->
+                <!--<div class="col-md-3">-->
+                    <!--<div class="single-gallery-image"-->
+                         <!--style="background: url(https://via.placeholder.com/250x200.png?text=Image+Goes+Here);"></div>-->
+                <!--</div>-->
                 <!--<div class="col-md-3">-->
                     <!--<a href="img/elements/g7.jpg"-->
                        <!--class="img-pop-up"-->
